# onion-crm

./: .env-sample  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 00dca06d056b_added_machine_contracts_table.py  058a0d263066_replace_is_global_column_to_is_hq_admin_.py  1c10ff0e0f40_added_tenant_table.py  20240806030108_add_permissions_index.py  20240806031214_add_user_coupon.py  20240808150445_add_otp.py  20240826104306_add_payment_method.py  20240826105834_update_payment_method.py  20240902162037_add_in_transaction_table.py  20240906113817_update_payment_methodr.py  20240911120110_update_user_model_slug.py  20240920164525_coupon_add_date.py  20240923013632_update_coupon_definition.py  20240925152303_add_coupon_definition.py  20240927034220_user_coupon_update.py  20241001010547_add_rewards.py  20241003110650_add_is_active_to_user_qr_key.py  20241008225840_payment_add_user_id.py  20241014123322_rp_add_user_id.py  20241015144453_payment_add_date.py  20241020170221_add_user_coupon_history.py  20241021115356_add_rp_description.py  20241021230853_ucu_add_user_coupon_id.py  20241023011325_cd_fix_null.py  20241023013310_mg_add_user_ids.py  20241030072726_order_add_ref.py  20241103121542_add_user_message.py  20241103162609_store_credit_txnadd_user_id.py  20241103204411_payment_add_desc.py  20241103212831_store_credit_add_desc.py  20241106154258_add_sku_source_id.py  (+23 more)
manual-migration/: permission.sql  tenant.sql
src/: config.py  db_error_handlers.py  http_client_helper.py  main.py
src/api/: deps.py  di.py  (+1 more)
(+205 files in other folders)
