[tool.poetry]
name = "shake-crm-app"
version = "0.1.0"
description = ""
authors = ["sydneywu <sydneywhz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
SQLAlchemy = "^2.0.28"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
databases = "^0.9.0"
pydantic = {version = "^2.6.4", extras = ["email"]}
pydantic-settings = "^2.2.1"
psycopg2 = "^2.9.9"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5.post1"
pytest-cov = "^4.1.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
annotated-types = "^0.6.0"
bcrypt = "^4.0.1"
httpx = "^0.27.0"
pypaynowsg = "^0.8.1"
pika = "^1.3.2"
twilio = "^9.2.4"
mypy = "^1.11.2"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
